--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 ###########
 # site.title
 
-title:    'PROJECT'
+title:    'Cool Minecraft Fighting Bot'
 subtitle: 'CS 175: Project in AI (in Minecraft)'
 
 
