--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,8 @@
 ###########
 # site.title
 
-title:    'Cool Minecraft Fighting Bot'
-subtitle: 'CS 175: Project in AI (in Minecraft)'
+title:    'NEAT Fighter'
+subtitle: 'A NEAT Project in AI (in Minecraft)'
 
 
 #########################
